id generation fixed